# code-sage

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260620-062044-code-sage-docs-483fc633.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: analysis_engine.py  cli.py  code_sage.py  codesage.py  config.py  engine.py  metrics.py  reviewer.py
tests/: test_analysis_engine.py  test_cli.py  test_code_sage.py  test_codesage.py  test_config.py  test_engine.py  test_metrics.py  test_reviewer.py
